# CMake_Course

./: .gitmodules  CMakeLists.txt  Makefile  build.ps1
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubModule.cmake
config/: CMakeLists.txt
include/my_lib/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cpp
